added user auth, favorites and subscriptions

--- a/src/panels/book/Book.css
+++ b/src/panels/book/Book.css
@@ -2,3 +2,15 @@
     list-style: none;
     padding-left: 0;
 }
+
+.book-cover {
+    width: 255px;
+    height: 400px;
+}
+
+@media (max-width: 576px) {
+    .book-cover {
+        width: 120px;
+        height: 185px;
+    }
+}
